Use Stream.toList
Enable save actions to automate things like removing useless imports
where spotted.